--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/estilo.css" />
     <link rel="stylesheet" href="CSS/all.min.css" />
   </head>
@@ -61,7 +64,7 @@
       </section>
 
       
-      <!-- Contenido de la página tercera seccion -->
+      <!-- Contenido de la página segunda seccion -->
       <section class="galeria">
         <h2>NUESTROS PROGRAMAS</h2>
         <div class="contenidotres">
@@ -84,7 +87,7 @@
           </div>
     <!-- Columna 3 -->
           <div class="columna">
-            <h2>YOGA CLASES</h2>
+            <h2>YOGA <br/>CLASES</h2>
             <img src="image/C_03.jpg" alt="Imagen 3">
             <p>CrossFit es un programa principal de fuerza y ​​​​acondicionamiento. Es utilizado por muchas instituciones militares y policiales serias. A menudo se utiliza en las academias de policía y en unidades militares de operaciones especiales. Así como por cientos de otros atletas aficionados y profesionales de todo el mundo.</p>
 
@@ -99,14 +102,13 @@
             <a href="enlace3.html">
               <i class="fa-solid fa-hand-point-right"></i>Detalles del programa</a>
           </div>
-    
-      </div>
-     </section>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
       <div class="filas">
-        <h3>Título del Footer</h3>
+        <h3>INSTAFIT</h3>
         <p>Regardless of what is your current shape now, after visiting our CrossFit sessions you will be at the top of your physical conditions!</p>
       </div>
       <div class="filas">
