--- a/clases.html
+++ b/clases.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -85,46 +88,20 @@
       </section>
 
       
-      <!-- Contenido de la página tercera seccion -->
-      <section class="galeria">
+      <!-- Contenido de la página segunda seccion -->
+      <section class="segundaseccion">
         <h2>NUESTROS PROGRAMAS</h2>
-        <div class="contenidotres">
+        <div class="contenidodos">
            <!-- Columna 1 -->
           <div class="columna">
-            <h2>BÁSICO CROSSFIT</h2>
-            <img src="image/C_01.jpg" alt="Imagen 1">
-            <p>CrossFit es un programa principal de fuerza y ​​​​acondicionamiento. Es utilizado por muchas instituciones militares y policiales serias. A menudo se utiliza en las academias de policía y en unidades militares de operaciones especiales. Así como por cientos de otros atletas aficionados y profesionales de todo el mundo.</p>
-
+            <h2>¿ESTÁS INTERESADO EN PONERTE MÁS EN FORMA?</h2>
+            <p>¡REGÍSTRATE A NUESTRAS ACTIVIDADES DE CROSSFIT AHORA MISMO!</p>
+            <img src="image/SC_02.png" alt="Imagen 1">
             <a href="enlace1.html">
               <i class="fa-solid fa-hand-point-right"></i>Detalles del programa</a>
           </div>
-    <!-- Columna 2 -->
-          <div class="columna">
-            <h2>APTITUD FÍSICA ESTUDIO</h2>
-            <img src="image/C_02.jpg" alt="Imagen 2">
-            <p>CrossFit es un programa principal de fuerza y ​​​​acondicionamiento. Es utilizado por muchas instituciones militares y policiales serias. A menudo se utiliza en las academias de policía y en unidades militares de operaciones especiales. Así como por cientos de otros atletas aficionados y profesionales de todo el mundo.</p>
-            <a href="enlace2.html">
-              <i class="fa-solid fa-hand-point-right"></i>Detalles del programa</a>
-          </div>
-    <!-- Columna 3 -->
-          <div class="columna">
-            <h2>YOGA CLASES</h2>
-            <img src="image/C_03.jpg" alt="Imagen 3">
-            <p>CrossFit es un programa principal de fuerza y ​​​​acondicionamiento. Es utilizado por muchas instituciones militares y policiales serias. A menudo se utiliza en las academias de policía y en unidades militares de operaciones especiales. Así como por cientos de otros atletas aficionados y profesionales de todo el mundo.</p>
 
-            <a href="enlace3.html">
-              <i class="fa-solid fa-hand-point-right"></i>Detalles del programa</a>
-          </div>
-    <!-- Columna 4 -->
-          <div class="columna">
-            <h2>PERSONAL  CAPACITACIÓN</h2>
-            <img src="image/C_04.jpg" alt="Imagen 4">  
-            <p>CrossFit es un programa principal de fuerza y ​​​​acondicionamiento. Es utilizado por muchas instituciones militares y policiales serias. A menudo se utiliza en las academias de policía y en unidades militares de operaciones especiales. Así como por cientos de otros atletas aficionados y profesionales de todo el mundo.</p>
-            <a href="enlace3.html">
-              <i class="fa-solid fa-hand-point-right"></i>Detalles del programa</a>
-          </div>
-    
-      </div>
+      </div>  
      </section>
     </main>
 
