--- a/coaches.html
+++ b/coaches.html
@@ -78,9 +78,9 @@
         <div class="filas">
             <h3>INFORMACIÓN DEL CONTACTO</h3>
             <ul>
-                <li>4096 N Highland St, Arlington, VA</li>
-                <li>32101, USA</li>
-                <li>INSTAFIT@gmail.com</li>
+                <li>Avenida Benavides 4096</li>
+                <li>Lima, Perú</li>
+                <li>instafit@gmail.com</li>
             </ul>
         </div>
         <div class="filas">
