--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
     <footer class="footer">
       <div class="filas">
         <h3>INSTAFIT</h3>
-        <p>Regardless of what is your current shape now, after visiting our CrossFit sessions you will be at the top of your physical conditions!</p>
+        <p>Independientemente de cuál sea tu forma actual, ¡después de visitar nuestras sesiones de CrossFit estarás en la cima de tus condiciones físicas!</p>
       </div>
       <div class="filas">
         <h3>INFORMACIÓN DEL CONTACTO</h3>
         <ul>
-          <li>4096 N Highland St, Arlington, VA</li>
-          <li>32101, USA</li>
-          <li>INSTAFIT@gmail.com</li>
+          <li> Avenida Benavides 4096</li>
+          <li>Lima, Perú</li>
+          <li>instafit@gmail.com</li>
         </ul>
       </div>
 
