--- a/clases.html
+++ b/clases.html
@@ -30,10 +30,10 @@
             <a href="clases.html"><i class="fa-solid fa-landmark"></i> Clases</a>
           </li>
           <li>
-            <a href=""><i class="fa-solid fa-user-group"></i> Coaches</a>
+            <a href="coaches.html"><i class="fa-solid fa-user-group"></i> Coaches</a>
           </li>
           <li>
-            <a href=""><i class="fa-regular fa-id-card"></i></i>Contactos</a>
+            <a href="contactos.html"><i class="fa-regular fa-id-card"></i></i>Contactos</a>
           </li>
         </ul>
       </nav>
