--- a/coaches.html
+++ b/coaches.html
@@ -58,6 +58,8 @@
         </section>
 
         <section class="testimonios">
+            <br>
+            <br>
             <h2>Testimonios de Nuestros Clientes</h2>
             <div class="testimonio">
                 <h3>Laura Torres</h3>
@@ -73,7 +75,7 @@
     <footer class="footer">
         <div class="filas">
             <h3>INFORMACIÓN</h3>
-            <p>Regardless of what is your current shape now, after visiting our CrossFit sessions you will be at the top of your physical conditions!</p>
+            <p>Independientemente de cuál sea tu forma actual, ¡después de visitar nuestras sesiones de CrossFit estarás en la cima de tus condiciones físicas!</p>
         </div>
         <div class="filas">
             <h3>INFORMACIÓN DEL CONTACTO</h3>
